BPMS-397 JDK25 compatibility